test/TestSuite/Syntax/Correct/Macro-4.tjp
project "Test" 2012-08-17 +1m

task t ${?undef} "T"

