test/TestSuite/Syntax/Errors/task_complete.tjp
project test "Test" "1.0" 2007-08-19 +2m 

task t "T" {
  start 2007-08-19
# MARK: error 6 task_complete
	complete 101
}

